--- a/posts/static/posts/css/homepage.css
+++ b/posts/static/posts/css/homepage.css
@@ -126,12 +126,12 @@ box-shadow:none;
 
 #left-side .jumbotron{
 
-background-color:#fff;
+background-color:transparent;
 padding-right:0px;
 padding-left:0px;
 padding-top:0px;
 padding-bottom:0px;
-box-shadow: 0px 1px 4px #bbb;
+box-shadow: none;
 margin-top:20px;
 border-radius:4px;
 border: none;
@@ -173,6 +173,7 @@ height:80px;
 
 }
 #most-seen{
+background-color:#fff;
 
 max-width:399px;
 }
