--- a/posts/templates/posts/category.html
+++ b/posts/templates/posts/category.html
@@ -15,13 +15,17 @@
 {% block carousel %}
 {% endblock %}
 
-  {% if posts.has_other_pages %}
-{% block pagination %}
+
+    {% block pagination %}
+ {% if posts.has_other_pages %}
  <div class="pagination-panel">
                     <div class="panel panel-default">
                         <div class="panel-body">
 
+
 <div class="text-center">
+                        <input type="hidden" class="posts-number" value="{{posts.number}}">
+
     <ul class="pagination">
         {% if posts.has_previous %}
         <li><a href="?page={{ posts.previous_page_number }}"><span>&raquo;</span></a></li>
@@ -30,9 +34,9 @@
         {% endif %}
         {% for i in posts.paginator.page_range %}
         {% if posts.number == i %}
-        <li class="active"><span>{{ i }}</span></li>
+        <li class="active number"><span>{{ i }}</span></li>
         {% else %}
-        <li><a href="?page={{ i }}"><span>{{ i }}</span></a></li>
+        <li class="number" style="display:none;"><a href="?page={{ i }}" ><span>{{ i }}</span></a></li>
         {% endif %}
         {% endfor %}
         {% if posts.has_next %}
@@ -46,8 +50,36 @@
                         </div>
                     </div>
  </div>
-
-{% endblock %}
 {% endif %}
+{% endblock %}
+
 {% block script %}
+<script>
+$(document).ready(function() {
+
+// first of pagination bar
+var fopb=0;
+
+// last of pagination bar
+
+var eopb=0;
+
+$( ".number" ).css( "display", "none" );
+var posts_number = $(".posts-number").val();
+if (posts_number > 1){
+ fopb = parseInt(posts_number) - 2;
+ eopb = parseInt(fopb) + 9;
+
+}
+else {
+ fopb = parseInt(posts_number) - 1;
+ eopb = parseInt(fopb) + 10;
+
+
+}
+
+
+$( ".number" ).slice( fopb, eopb ).css( "display", "" );
+    });
+</script>
 {% endblock %}
