--- a/posts/templates/posts/economic_calender.html
+++ b/posts/templates/posts/economic_calender.html
@@ -65,7 +65,7 @@
             {{ query.importance }}
 
         </td>
-        <td>
+        <td style="width:200px;">
             {{ query.event }}
 
         </td>
