--- a/posts/templates/posts/no_vip.html
+++ b/posts/templates/posts/no_vip.html
@@ -8,10 +8,13 @@
 {% endblock %}
 
 {% block body %}
-<div class="container-fluid">
-<span style="font-size:20px;">برای مشاهده این پست نیاز به اشتراک ویژه دارید.</span>
+<div class="container-fluid" style="font-size:16px;">
+<span style="font-size:20px;">برای مشاهده این پست نیاز به اشتراک ویژه دارید
+</span>
+    <br>
+    <br>
 <p>شما اشتراک ویژه ندارید یا هنوز وارد سایت نشده اید !!!</p>
-<p>برای وارد شدن به سایت از  لینک <a href="/user/login/">این</a> استفاده کنید.</p>
-<p>برای خرید اشتراک  سایت از  لینک <a href="/tariffs/">این</a> استفاده کنید.</p>
+<p>برای وارد شدن به سایت  <a href="/user/login/">کلیک</a> کنید.</p>
+<p>برای خرید اشتراک  سایت  <a href="/tariffs/">کلیک</a> کنید.</p>
 </div>
 {% endblock %}
