--- a/posts/templates/posts/signals.html
+++ b/posts/templates/posts/signals.html
@@ -33,8 +33,11 @@
 
                 <th>Entry</th>
 
+
                 <th >Take Profit</th>
                 <th >Stop Loss</th>
+
+                <th>Pin</th>
 
 
             </tr>
@@ -66,13 +69,25 @@
                 {{ item.Entry }}
 
                 </td>
-                <td class="take-profit" >
-                {{ item.Take_Profit }}
+                <td class="take-profit" style="color:#66cd00;">
+                    {% if item.Take_Profit != '--' %}
+                <img src="{% static 'posts/img/signal-up.png' %}">
+                    {% endif %}
+                    {{ item.Take_Profit }}
 
                 </td>
-                <td class="stop-loss" >
+
+                <td class="stop-loss" style="color:#FD0E35;">
+                       {% if item.Stop_Loss != '--' %}
+                <img src="{% static 'posts/img/signal-down.png' %}">
+                    {% endif %}
+
+
                 {{ item.Stop_Loss }}
 
+                </td>
+                <td>
+                    {{ item.Pin }}
                 </td>
 
 
