--- a/posts/templates/posts/bankorders.html
+++ b/posts/templates/posts/bankorders.html
@@ -17,7 +17,7 @@
 {% endblock %}
  {% block title %}
 
-<title>Order Bank</title>
+<title>اوردر بانک ها</title>
     {% endblock %}
 {% block body %}
 <div class="container-fluid" id="BankOrders-container" dir="ltr">
@@ -64,14 +64,14 @@
                 {{ item.Entry }}
 
                 </td>
-                <td class="take-profit" style="color:#66cd00;">
+                <td class="take-profit">
                       {% if item.Take_Profit != '--' %}
                 <img src="{% static 'posts/img/signal-up.png' %}">
                     {% endif %}
                 {{ item.Take_Profit }}
 
                 </td>
-                <td class="stop-loss" style="color:#FD0E35;">
+                <td class="stop-loss">
                       {% if item.Stop_Loss != '--' %}
                 <img src="{% static 'posts/img/signal-down.png' %}">
                     {% endif %}
