--- a/posts/templates/posts/signals.html
+++ b/posts/templates/posts/signals.html
@@ -17,7 +17,7 @@
 {% endblock %}
  {% block title %}
 
-<title>Order Bank</title>
+<title>سیگنال ها</title>
     {% endblock %}
 {% block body %}
 <div class="container-fluid" id="BankOrders-container" dir="ltr">
