--- a/posts/templates/posts/bankorders.html
+++ b/posts/templates/posts/bankorders.html
@@ -64,14 +64,14 @@
                 {{ item.Entry }}
 
                 </td>
-                <td class="take-profit">
+                <td id="take-profit">
                       {% if item.Take_Profit != '--' %}
                 <img src="{% static 'posts/img/signal-up.png' %}">
                     {% endif %}
                 {{ item.Take_Profit }}
 
                 </td>
-                <td class="stop-loss">
+                <td id="stop-loss">
                       {% if item.Stop_Loss != '--' %}
                 <img src="{% static 'posts/img/signal-down.png' %}">
                     {% endif %}
