--- a/posts/static/posts/css/homepage.css
+++ b/posts/static/posts/css/homepage.css
@@ -258,6 +258,13 @@ max-width:615px;
 margin:0px auto;
 margin-top:20px;
 }
+.carousel-caption a{
+
+
+font-size:15px;
+
+}
+
 .carousel-control.left, .carousel-control.right {
    background-image:none !important;
    filter:none !important;
@@ -268,6 +275,19 @@ margin-top:20px;
 background-color:#0066CC;
 
 }
+
+@media only screen and (min-width:768px){
+
+.carousel-caption a{
+
+
+font-size:25px;
+
+}
+
+}
+
+
 
 
 
