--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -52,7 +52,7 @@
 
             </div>
 
-            <div class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse" id="navbar-collapse">
 
 
                 <p class="navbar-text navbar-right"><a href="/news/" class="navbar-link">اخبار</a>
