--- a/specificpages/templates/specificpages/pamm.html
+++ b/specificpages/templates/specificpages/pamm.html
@@ -34,15 +34,15 @@
 
         <li>۴-وجه واریز کنید و شاهد رشد سبد سهام خود باشید</li>
     </ul>
-    <span>برای ثبت نام در کارگزاری FXTM وارد لینک زیر شوید:</span>
+    <span>برای ثبت نام در کارگزاری FXTM روی لینک زیر کلیک کنید:</span>
     <br>
-    <a href="https://www.forextime.com/?partner_id=4913110">https://www.forextime.com/?partner_id=4913110</a>
+    <a href="https://www.forextime.com/?partner_id=4913110">www.forextime.com/...</a>
 
     <br>
     <span>برای وصل شدن به حساب سرمایه گزاری ما از طریق لینک زیر اقدام کنید:</span>
     <br>
     <a
-        href="https://www.forextime.com/fa/strategy/NAVASANGOLD1">https://www.forextime.com/fa/strategy/NAVASANGOLD1</a>
+        href="https://www.forextime.com/fa/strategy/NAVASANGOLD1">www.forextime.com/fa/strategy/NAVASANGOLD1</a>
 </div>
 
 {% endblock %}
