description tag is some page changed

--- a/posts/templates/posts/bankorders.html
+++ b/posts/templates/posts/bankorders.html
@@ -6,8 +6,8 @@
 {% load staticfiles %}
 
 {% block meta %}
-<meta name="keywords" content="تقویم اقتصادی">
-<meta name="description" content="مشاهده رویداد هایی که در طی ماه در بازار بورس طلا اتفاق افتاده ویا قرار است اتفاق بیفتند. ">
+<meta name="keywords" content="اوردر بانک ها وbankorders">
+<meta name="description" content="با استفاده از این جدول بفهمید بانک ها چه استراتژی ها و پوزیشن هایی را دنبال میکنند. ">
 
 {% endblock %}
 
