--- a/posts/templates/posts/signals.html
+++ b/posts/templates/posts/signals.html
@@ -7,7 +7,7 @@
 
 {% block meta %}
 <meta name="keywords" content="سیگنال">
-<meta name="description" content="">
+<meta name="description" content="سیگنال های روزانه جفت ارزهای بازار رو در این قسمت مشاهده کنید.">
 
 {% endblock %}
 
