--- a/specificpages/templates/specificpages/mql.html
+++ b/specificpages/templates/specificpages/mql.html
@@ -2,9 +2,8 @@
 {% load staticfiles %}
 
 {% block meta %}
-<meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript">
-<meta name="description" content="Free Web tutorials on HTML and CSS">
-<meta name="author" content="John Doe">
+<meta name="keywords" content="mql, ام کیو ال">
+<meta name="description" content="استراتژی معاملاتی گروه نوسان گلد وتوضیحاتی در مورد mal...">
 
 {% endblock %}
 
