--- a/specificpages/templates/specificpages/tariffs.html
+++ b/specificpages/templates/specificpages/tariffs.html
@@ -3,7 +3,7 @@
 
 {% block meta %}
 <meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript">
-<meta name="description" content="Free Web tutorials on HTML and CSS">
+<meta name="description" content=" اشتراک ویژه ما را تهیه کنید تا سیگنال ها,تحلیل های هفتگی و اوردربانک ها دسترسی داشته باشید.">
 <meta name="author" content="John Doe">
 
 {% endblock %}
