--- a/specificpages/templates/specificpages/pamm.html
+++ b/specificpages/templates/specificpages/pamm.html
@@ -2,9 +2,8 @@
 {% load staticfiles %}
 
 {% block meta %}
-<meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript">
-<meta name="description" content="Free Web tutorials on HTML and CSS">
-<meta name="author" content="John Doe">
+<meta name="keywords" content="pamm, پم">
+<meta name="description" content="در کارگزاری FXTM  ثبت نام کرده و بعد به حساب سرمایه گذاری نوسان گلد وصل شوید. ">
 
 {% endblock %}
 
