--- a/specificpages/templates/specificpages/rules.html
+++ b/specificpages/templates/specificpages/rules.html
@@ -2,9 +2,7 @@
 {% load staticfiles %}
 
 {% block meta %}
-<meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript">
-<meta name="description" content="Free Web tutorials on HTML and CSS">
-<meta name="author" content="John Doe">
+<meta name="description" content="قوانین سایت نوسان گلد.خیلی مختصر حتما بخوانید.">
 
 {% endblock %}
 
