pamm link changed(dir)

--- a/specificpages/templates/specificpages/pamm.html
+++ b/specificpages/templates/specificpages/pamm.html
@@ -35,7 +35,7 @@
     </ul>
     <span>برای ثبت نام در کارگزاری FXTM روی لینک زیر کلیک کنید:</span>
     <br>
-    <a href="https://www.forextime.com/?partner_id=4913110">www.forextime.com/...</a>
+    <a href="https://www.forextime.com/?partner_id=4913110" dir="ltr">www.forextime.com/...</a>
 
     <br>
     <span>برای وصل شدن به حساب سرمایه گزاری ما از طریق لینک زیر اقدام کنید:</span>
