--- a/posts/templates/posts/homepage.html
+++ b/posts/templates/posts/homepage.html
@@ -47,7 +47,7 @@
       <div class="item">
         <img src="{% static 'posts/img/slide2.png' %}" alt="slide2" style="width:100%;">
            <div class="carousel-caption" >
-                    <a href="/pamm" style="color:#b3b3b3;text-shadow:none;font-weight:700;"> کلیک کنید تا با ما بیشتر آشنا شوید</a>
+                    <a href="/pamm" style="color:#2887C8;text-shadow:none;font-weight:700;"> ورود به صفحه ی حساب پم</a>
                 </div>
       </div>
 
