--- a/posts/templates/posts/no_vip.html
+++ b/posts/templates/posts/no_vip.html
@@ -3,8 +3,8 @@
 {% load staticfiles %}
 
 
-{% block style %}
-
+{% block title %}
+<title>اشتراک ویژه ندارید!!</title>
 {% endblock %}
 
 {% block body %}
