--- a/users/static/users/css/UsersContact.css
+++ b/users/static/users/css/UsersContact.css
@@ -1,8 +1,14 @@
+body{
+
+
+background: url("../img/contact-us.jpg") no-repeat center center fixed;
+
+}
+
 #main{
 /*
 compressed imgs are .jpg
 */
-background: url("../img/contact-us.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
