sticky-sidebar addedbase links corrected

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -22,7 +22,7 @@
 {% block body %}
 <div class="container-fluid" id="detail-container">
     <div class="jumbotron">
-        <h3 style="text-align:center;padding-bottom:20px;">{{post.header }}</h3>
+        <h1 style="font-size:24px;text-align:center;padding-bottom:20px;">{{post.header }}</h1>
         <img class="img-responsive" src="{{post.img.url}}" title="{{post.header }}" alt="{{post.header }}"
              style="margin:10px auto; width:90%;max-width:500px; ">
         <div id="post-text" style="padding:10px;">
