--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="/favicon.png">
 
-    <link rel="stylesheet" type="text/css" href="{% static 'posts/css/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'posts/css/base.min.css' %}">
 
     {% block style %}
     {% endblock %}
@@ -228,7 +228,7 @@
                 <a href="/user/logout/"><span class="glyphicon glyphicon-off"></span>خروج</a>
                   <ul class="list-inline" id="SideNav-bottom-links-list-1">
                     <li>
-                        <a href="/about-us">
+                        <a href="/about-us/">
                             درباره ما
                         </a>
                     </li>
@@ -377,7 +377,7 @@
 
 <script src="{% static 'posts/js/jquery.validate.js' %}"></script>
 
-<script src="{% static 'posts/js/base.js' %}"></script>
+<script src="{% static 'posts/js/base.min.js' %}"></script>
 
 
 {% block script %}
