signals deleted all analysis thing deleted

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -88,51 +88,7 @@
 
 
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
 
-                    <li role="presentation" class="dropdown article-dropdown">
-
-                        <a class="dropdown-toggle" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                            تحلیل ویژه </a>
-                        <ul class="dropdown-menu menu2">
-                            <li role="presentation" class="uo-nested-dropdown dropdown"><a class="dropdown-toggle" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                                انس جهانی </a>
-                                <ul class="dropdown-menu menu5">
-                                    <li>
-                                        <a href="{% url 'posts:articles' find='price-action-uo' %}">پرایس اکشن</a>
-                                    </li>
-                                    <li>
-                                        <a href="{% url 'posts:articles' find='elliott-uo' %}">الیوت</a>
-                                    </li><li>
-                                        <a href="{% url 'posts:articles' find='ichimoku-uo' %}">ایچیموکو</a>
-                                    </li>
-
-
-
-                                </ul>
-                            </li>
-
-                            <li role="presentation" class="poc-nested-dropdown dropdown"><a class="dropdown-toggle" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                                جفت ارزها </a>
-                                <ul class="dropdown-menu menu6">
-                                      <li>
-                                        <a href="{% url 'posts:articles' find='price-action-poc' %}">پرایس اکشن</a>
-                                    </li><li>
-                                        <a href="{% url 'posts:articles' find='elliott-poc' %}">الیوت</a>
-                                    </li>
-
-                                    <li><a href="{% url 'posts:articles' find='ichimoku-poc' %}">ایچیموکو</a></li>
-
-                                </ul>
-                            </li>
-                            <li><a href="{% url 'posts:articles' find='domestic-dollar' %}">دلار داخلی</a></li>
-
-
-                        </ul>
-                    </li>
-
-
-                </ul>
 
                 <ul class="nav navbar-nav navbar-right" style="">
 
@@ -177,10 +133,9 @@
 
 <p class="navbar-text navbar-right"><a href="/bankorders/" class="navbar-link">اوردر بانک</a>
                 </p>
-                                <p class="navbar-text navbar-right"><a href="/signals/" class="navbar-link">سیگنال ها</a>
 
 
-            </p></div>
+           </div>
 
         </div>
     </nav>
@@ -228,7 +183,7 @@
                 <a href="/user/logout/"><span class="glyphicon glyphicon-off"></span>خروج</a>
                   <ul class="list-inline" id="SideNav-bottom-links-list-1">
                     <li>
-                        <a href="/about-us/">
+                        <a href="/about-us">
                             درباره ما
                         </a>
                     </li>
