--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -29,10 +29,10 @@
 <img src="{% static 'posts/img/user.png' %}">
 
             </button>
-            <button type="button" id="left-side-toggle-close">
 
 
-            </button>
+
+
 
 
             <a href="{% url 'posts:home' %}" class="navbar-brand">
@@ -276,6 +276,9 @@
 
     {% endblock %}
 </div>
+<!--
+<button class='btn move-top-btn' style=""><img src="{% static 'posts/img/arrow-top.png' %}"/></button>
+-->
 <footer class="footer">
 
     <div class="jumbotron" id="footer-jumbotron">
