--- a/posts/static/posts/css/homepage.css
+++ b/posts/static/posts/css/homepage.css
@@ -275,6 +275,13 @@ font-size:15px;
 background-color:#0066CC;
 
 }
+.move-top-btn{
+
+display:none;
+position:fixed;
+bottom:40px;
+background-color:transparent;
+}
 
 @media only screen and (min-width:768px){
 
